k8s/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-api-deployment
  labels:
    app: movie-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-api
  template:
    metadata:
      labels:
        app: movie-api
    spec:
      containers:
        - name: movie-api
          image: markgoertz/clockbox:latest
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 50m
              memory: 100Mi
            requests:
              cpu: 25m
              memory: 10Mi
          ports:
          - containerPort: 80
          volumeMounts:
          - name: settings
            mountPath: /app/settings
            readOnly: true
      volumes:
      - name: settings
        secret:
          secretName: movie-docker-appsettings
