k8s/deploy-to-minikube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-api-deployment
  namespace: morvie-namespace
  annotations:
    team: morvie-team
  labels:
    app: movie-api
spec:
  replicas: 1
  minReadySeconds: 15
  selector:
    matchLabels:
      app: movie-api
  template:
    metadata:
      namespace: morvie-namespace
      labels:
        app: movie-api
    spec:
      containers:
        - name: movie-api
          image: markgoertz/clockbox
          imagePullPolicy: Always
          securityContext:
            runAsNonRoot: true
            readOnlyRootFilesystem: true
          resources:
            limits:
              cpu: 50m
              memory: 100Mi
            requests:
              cpu: 25m
              memory: 10Mi
          ports:
          - containerPort: 80
          volumeMounts:
          - name: settings
            mountPath: /app/settings
            readOnly: true
      volumes:
      - name: settings
        secret:
          secretName: movie-docker-appsettings

---
apiVersion: v1
kind: Service
metadata:
  name: movie-api-service
  namespace: morvie-namespace
  labels:
    app: movie-api
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: movie-api
  type: LoadBalancer
