k8s/service.yml
# Service for the API:
apiVersion: v1
kind: Service
metadata:
  name: movie-api-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 443
      targetPort: 80
  selector:
    app: movie-api
